RESOLVED FIXED213287
Fix spelling of evaluteDynamicMediaQueryRules
https://bugs.webkit.org/show_bug.cgi?id=213287
Summary Fix spelling of evaluteDynamicMediaQueryRules
Antti Koivisto
Reported 2020-06-17 01:25:19 PDT
evalute -> evaluate
Attachments
patch (6.04 KB, patch)
2020-06-17 01:27 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2020-06-17 01:27:14 PDT
EWS
Comment 2 2020-06-17 01:52:43 PDT
Committed r263140: <https://trac.webkit.org/changeset/263140> All reviewed patches have been landed. Closing bug and clearing flags on attachment 402090 [details].
Radar WebKit Bug Importer
Comment 3 2020-06-17 01:53:16 PDT
Note You need to log in before you can comment on or make changes to this bug.