Fix spelling of evaluteDynamicMediaQueryRules https://bugs.webkit.org/show_bug.cgi?id=213287

Unreviewed.


* style/RuleSet.cpp:
(WebCore::Style::RuleSet::addRulesFromSheet):
(WebCore::Style::RuleSet::evaluateDynamicMediaQueryRules):
(WebCore::Style::RuleSet::evaluteDynamicMediaQueryRules): Deleted.
* style/RuleSet.h:
* style/StyleResolver.cpp:
(WebCore::Style::Resolver::evaluateDynamicMediaQueries):
* style/StyleScopeRuleSets.cpp:
(WebCore::Style::ScopeRuleSets::evaluateDynamicMediaQueryRules):
(WebCore::Style::ScopeRuleSets::evaluteDynamicMediaQueryRules): Deleted.
* style/StyleScopeRuleSets.h:


Canonical link: https://commits.webkit.org/226071@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263140 268f45cc-cd09-0410-ab3c-d52691b4dbfc